--- a/pdsa-form-test.html
+++ b/pdsa-form-test.html
@@ -177,7 +177,7 @@
         setSubmitStatus({ state: 'loading', message: '' });
         
         try {
-          const response = await fetch('https://defaulta5374a7a9ac14be5be4df624085ecf.bf.environment.api.powerplatform.com:443/powerautomate/automations/direct/workflows/8920b0a1cb46450897f7c82b6aff9049/triggers/manual/paths/invoke?api-version=1&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=71Ge3eIRaSEeuipjzbMwy2wwm1Tfe90GjdqRkcp8oyE', {
+          const response = await fetch('https://script.google.com/macros/s/AKfycbyKlL91F2cNm5eHeizoRrUJSVOxGhmeDdknQUF758oSvq9XoI2ro9hn15nvQz2mzhOthw/exec', {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json',
@@ -405,7 +405,7 @@
             <div className="mt-8 text-center text-sm text-slate-500">
               <p>Best Start Collaboration</p>
               <p className="mt-2">
-                This content is for improvement work. Data you submit is shared with the project team only.
+                This content is just to see what works for Best Start Facilitators - all information will only go to Sarah and Antoni.
               </p>
             </div>
           </div>
@@ -418,4 +418,3 @@
   </script>
 </body>
 </html>
-
