--- a/pdsa-form-test.html
+++ b/pdsa-form-test.html
@@ -225,7 +225,9 @@
             >
               <h1 className="text-4xl font-bold mb-2">Best Start PDSA Form</h1>
               <p className="text-lg opacity-90">
-                Use this form to document each Plan-Do-Study-Act cycle test.
+                Based on what you told us in your Learning Circles focus groups, we are interested in your thoughts on this set up. 
+                It is not too vastly different to the current layout, but is hopefully more flexible, straightforward, and makes more sense to use.
+                Let us know what you think!
               </p>
             </div>
 
