--- a/pdsa-form-test.html
+++ b/pdsa-form-test.html
@@ -228,7 +228,7 @@
             />
 
             <TextArea label="WHY?" subtitle="Why are you testing this change?"
-              placeholder="E.g. Families reported confusion about registration steps, This will enable us to.., Strengthening relationships..."
+              placeholder="e.g. 'This will enable us to...; Families reported confusion about enrolment steps; educators wanted clearer referral pathways; data showed low MCH attendance.”"
               value={formData.whyReason} onChange={(v) => handleInputChange('whyReason', v)}
               color={ACCENTS.why}
             />
@@ -307,4 +307,5 @@
   </script>
 </body>
 </html>
+
 
